--- a/WeebApp/Navigation/Style.css
+++ b/WeebApp/Navigation/Style.css
@@ -42,6 +42,7 @@ body{
 #ListMenu>li{
 	color: #fff;
 	font-size: 2em;
+
 	-webkit-transition-property: background-color, margin-left ; 
 	-webkit-transition-duration: 1s;
 }
@@ -103,7 +104,7 @@ a {
 }	
 
 
-img[alt] {
+#ListAlbum img[alt] {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -117,7 +118,7 @@ img[alt] {
 
 
 }
-img[alt]:hover, img[alt]:focus {
+#ListAlbum img[alt]:hover, #ListAlbum img[alt]:focus {
 	padding-left:140px;
 }
 
@@ -145,21 +146,21 @@ img[alt]:hover, img[alt]:focus {
 
 #AlbumView img[alt] {
 	position: absolute;
-	left: 0;
+	left: 300px;
 	top: 0;
 	border: none;
-	height: 400px;
-	width: 400px; 
-	padding-left: 300px;
+	height: 404px;
+	width: 404px; 
+	padding-left: 00px;
 
-	-webkit-transition-property: padding-left;
+	-webkit-transition-property: margin-left;
 	-webkit-transition-duration: .5s;
 	-webkit-transition-timing-function: ease-out;
 
 
 }
 #AlbumView img[alt]:hover, #AlbumView img[alt]:focus {
-	padding-left:00px;
+	margin-left: -300px;
 }
 
 
